# quantalytics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TECHNICAL_GUIDE.md  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml  static.yml
docs/: docusaurus.config.js  package-lock.json  package.json  tearsheet_template.html
docs/docs/: analytics.md  charts.md  intro.md  metrics.md  publishing.md  reports.md  stats.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
quantalytics/: __init__.py
quantalytics/analytics/: __init__.py  benchmarks.py  core.py  metrics.py  performance.py  stats.py
quantalytics/charts/: timeseries.py
quantalytics/metrics/: __init__.py  performance.py
quantalytics/reporting/: __init__.py  metrics.py  tearsheet.py
quantalytics/reporting/templates/: tearsheet.html
quantalytics/stats/: __init__.py  core.py
quantalytics/utils/: timeseries.py
src/quantalytics/: __init__.py  charts.py  metrics.py  reports.py
tests/: benchmark_returns.csv  daily_returns.csv  test_benchmarks.py  test_metrics.py  test_metrics_module.py  test_reporting.py  test_stats.py  test_stats_module.py
website/: docusaurus.config.js  package.json
website/docs/: getting-started.md  intro.md
website/docs/api/: metrics.md
website/src/css/: custom.css
