[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantalytics"
version = "0.1.0"
description = "Modern quantitative analytics library for portfolio metrics, charts, and reports"
readme = "README.md"
authors = [
  { name = "Quantalytics Contributors" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "plotly>=5.15",
  "jinja2>=3.1",
  "matplotlib>=3.6"
]
keywords = ["quantitative", "finance", "analytics", "metrics", "charts", "reporting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.urls]
Homepage = "https://quantalytics.dev"
Documentation = "https://quantalytics.dev/docs/intro"
Repository = "https://github.com/quantalytics/quantalytics"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "build>=1.0",
  "twine>=4.0"
]

[tool.setuptools]
packages = ["quantalytics", "quantalytics.metrics", "quantalytics.charts", "quantalytics.reporting", "quantalytics.utils"]
include-package-data = true

[tool.setuptools.package-data]
"quantalytics.reporting" = ["templates/*.html"]
