[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantalytics"
version = "0.1.0"
description = "Fast modern Python library for quantitative analytics metrics, charts, and tear sheets"
readme = "README.md"
authors = [
  { name = "Quantalytics Contributors" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "jinja2>=3.1",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]

dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.9",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/example/quantalytics"
Documentation = "https://quantalytics-docs.example.com"
Source = "https://github.com/example/quantalytics"
Issues = "https://github.com/example/quantalytics/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP"]

[tool.black]
line-length = 100
